# shutyl

./: .gitignore  README.md  gen_compressed.py  pyproject.toml  setup.cfg
examples/: default_config.json
shutyl/: __main__.py  config.py  file_sync.py  main.py  signal_monitor.py
src/flac-to-vorbis/: __main__.py  config.py  file_sync.py  signal_monitor.py
src/shutyl/: __main__.py  file_sync.py
