[metadata]
name = shutyl
version = 0.0.4
author = Wyatt Childers
author_email = wchilders@nearce.com
description = A powerful file conversion utility
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DarkArc/shutyl
project_urls =
    Bug Tracker = https://github.com/DarkArc/shutyl/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent

[options.entry_points]
console_scripts =
    shutyl = shutyl.main:main

[options]
packages = find:
python_requires = >=3.6
